Revert "Merge branch 'main' into NgocAnh"
This reverts commit c213cc25d419818e355124a1373e4efe123e0a92, reversing
changes made to cb75e951dce4372f7e224c68d7613f2156fa89c2.